# data-breaker

./: .gitignore  BROKERS.md  CLAUDE.md  README.md  cli.py  pyproject.toml
data/: brokers.yaml  cc_auto.py  profile.yaml.example
databroker/: orchestrator.py
databroker/core/: classify.py  config.py  domains.py  models.py  queue.py  recon.py  store.py
databroker/stages/: applicability.py  browser_scout.py  claude_code_driver.py  crawler.py  drivers.py  registry.py  remover.py  scout.py
scripts/: cc_prefetch.py  fix_malformed_domains.py  generate_markdown.py  migrate_yaml.py
tests/: test_applicability.py  test_pipeline.py
